--- a/Code/CMakeLists.txt
+++ b/Code/CMakeLists.txt
@@ -19,12 +19,12 @@ project (neutrino)
 
 message("Creating a SOURCES variable with a link to all cpp files to compile...")
 set(SOURCES
-src/main.cpp
-src/openclgl.cpp
-src/program.cpp
-src/linear_algebra.cpp
-src/projective_geometry.cpp
-src/utilities.cpp)
+$ENV{NEUTRINO_PATH}/Code/src/main.cpp
+$ENV{NEUTRINO_PATH}/Code/src/openclgl.cpp
+$ENV{NEUTRINO_PATH}/Code/src/program.cpp
+$ENV{NEUTRINO_PATH}/Code/src/linear_algebra.cpp
+$ENV{NEUTRINO_PATH}/Code/src/projective_geometry.cpp
+$ENV{NEUTRINO_PATH}/Code/src/utilities.cpp)
 
 message("Setting directory for the Mac executable...")
 if(APPLE)
@@ -40,7 +40,7 @@ message("Adding an executable with the above sources...")
 add_executable(neutrino ${SOURCES})
 
 message("Setting the directories that should be included in the build command...")
-target_include_directories(neutrino PRIVATE ${CMAKE_HOME_DIRECTORY}/include)
+target_include_directories(neutrino PRIVATE $ENV{NEUTRINO_PATH}/Code/include)
 
 message("Setting the Mac libraries that should be linked in the build command...")
 if(APPLE)
@@ -64,11 +64,11 @@ message("")
 
 # Type: "make doc" in order to build the Doxygen documentation of the project.
 
-message("Checking if Doxygen is installed...")
+#message("Checking if Doxygen is installed...")
 find_package(Doxygen)
 if (DOXYGEN_FOUND)
     message("Setting input and output files...")
-    set(DOXYGEN_IN ${CMAKE_CURRENT_SOURCE_DIR}/../Docs/Doxyfile.in)
+    set(DOXYGEN_IN ${CMAKE_HOME_DIRECTORY}/../Docs/Doxyfile.in)
     set(DOXYGEN_OUT ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)
 
     message("Requesting to configure the file...")
