Fixed program.cpp path in CMakeLists.txt

--- a/Code/CMakeLists.txt
+++ b/Code/CMakeLists.txt
@@ -15,16 +15,16 @@ if(UNIX AND NOT APPLE)
 endif()
 
 message("Setting project name...")
-project (neutrino)
+project (cloth)
 
 message("Creating a SOURCES variable with a link to all cpp files to compile...")
 set(SOURCES
 $ENV{NEUTRINO_PATH}/Code/src/main.cpp
 $ENV{NEUTRINO_PATH}/Code/src/openclgl.cpp
-$ENV{NEUTRINO_PATH}/Code/src/program.cpp
 $ENV{NEUTRINO_PATH}/Code/src/linear_algebra.cpp
 $ENV{NEUTRINO_PATH}/Code/src/projective_geometry.cpp
-$ENV{NEUTRINO_PATH}/Code/src/utilities.cpp)
+$ENV{NEUTRINO_PATH}/Code/src/utilities.cpp
+${CMAKE_HOME_DIRECTORY}/src/program.cpp)
 
 message("Setting directory for the Mac executable...")
 if(APPLE)
@@ -37,21 +37,21 @@ if(LINUX)
 endif(LINUX)
 
 message("Adding an executable with the above sources...")
-add_executable(neutrino ${SOURCES})
+add_executable(cloth ${SOURCES})
 
 message("Setting the directories that should be included in the build command...")
-target_include_directories(neutrino PRIVATE $ENV{NEUTRINO_PATH}/Code/include)
+target_include_directories(cloth PRIVATE $ENV{NEUTRINO_PATH}/Code/include)
 
 message("Setting the Mac libraries that should be linked in the build command...")
 if(APPLE)
   message("Setting the libraries that should be linked in the build command...")
-  target_link_libraries(neutrino "-framework OpenGL" "-framework OpenCL" "-lGLEW" "-lglfw" "-lm")
+  target_link_libraries(cloth "-framework OpenGL" "-framework OpenCL" "-lGLEW" "-lglfw" "-lm")
 endif(APPLE)
 
 message("Setting the Linux libraries that should be linked in the build command...")
 if(LINUX)
   message("Setting the libraries that should be linked in the build command...")
-  target_link_libraries(neutrino "-lOpenGL" "-lOpenCL" "-lGLEW" "-lglfw" "-lm")
+  target_link_libraries(cloth "-lOpenGL" "-lOpenCL" "-lGLEW" "-lglfw" "-lm")
 endif(LINUX)
 
 message("GCC build started!")
