It can't find any Neutrino core file...debugging Cmakelists.txt.

--- a/Code/CMakeLists.txt
+++ b/Code/CMakeLists.txt
@@ -9,8 +9,8 @@ message("#######################################################################
 project (cloth)                                                                                     # Setting project name...
 message("Project name = ${PROJECT_NAME}")                                                           # Printing message...
 message("Setting project source directories...")                                                    # Printing message...
+aux_source_directory(${NEUTRINO_PATH}/Code/src/ NEUTRINO_DIR)                                       # Setting Neutrino sources path...
 aux_source_directory("src/" SRC_DIR)                                                                # Setting project sources path...
-aux_source_directory("${NEUTRINO_PATH}/Code/src/" NEUTRINO_DIR)                                     # Setting Neutrino sources path...
 list(REMOVE_ITEM NEUTRINO_DIR ${NEUTRINO_PATH}/Code/src/main.cpp)                                   # Removing Neutrino's main.cpp ...
 set(SOURCES ${SRC_DIR} ${NEUTRINO_DIR} ${GLAD_PATH}/src/glad.c)                                     # Setting project sources...
 add_custom_target(run                                                                               # Adding "make run" command...
