--- a/Code/CMakeLists.txt
+++ b/Code/CMakeLists.txt
@@ -9,10 +9,8 @@ message("#######################################################################
 project (cloth)                                                                                     # Setting project name...
 message("Project name = ${PROJECT_NAME}")                                                           # Printing message...
 message("Setting project source directories...")                                                    # Printing message...
-aux_source_directory(${NEUTRINO_PATH}/Code/src/ NEUTRINO_DIR)                                       # Setting Neutrino sources path...
 aux_source_directory("src/" SRC_DIR)                                                                # Setting project sources path...
-list(REMOVE_ITEM NEUTRINO_DIR ${NEUTRINO_PATH}/Code/src/main.cpp)                                   # Removing Neutrino's main.cpp ...
-set(SOURCES ${SRC_DIR} ${NEUTRINO_DIR} ${GLAD_PATH}/src/glad.c)                                     # Setting project sources...
+set(SOURCES ${SRC_DIR})                                                                             # Setting project sources...
 add_custom_target(run                                                                               # Adding "make run" command...
   WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}                                               # Working directory.
   COMMAND ${PROJECT_NAME}                                                                           # Project name.
@@ -55,17 +53,12 @@ if(APPLE)                                                                       
   target_include_directories(                                                                       # Setting include directories...
     ${PROJECT_NAME}                                                                                 # Project name.
     PRIVATE ${CMAKE_HOME_DIRECTORY}/include                                                         # Neutrino includes.
-    ${GLAD_PATH}/include                                                                            # GLAD includes.
-    ${GLFW_PATH}/include                                                                            # GLFW includes.
-    ${NEUTRINO_PATH}/Code/include)                                                                  # Neutrino includes.
+    ${NEUTRINO_PATH})                                                                               # Neutrino includes.
   message("Setting Mac library directories...")                                                     # Printing message...
-  set(GLFW_LIBRARY ${GLFW_PATH}/lib-macos/libglfw.3.dylib)                                          # Setting GLFW library...
+  #set(GLFW_LIBRARY ${GLFW_PATH}/lib-macos/libglfw.3.dylib)                                          # Setting GLFW library...
   target_link_libraries(                                                                            # Setting other linked libraries...
     ${PROJECT_NAME}                                                                                 # Project name.
-    "-framework OpenGL"                                                                             # OpenGL library.
-    "-framework OpenCL"                                                                             # OpenCL library.
-    ${GLFW_LIBRARY}                                                                                 # GLFW library.
-    "-lm")                                                                                          # "math" library.
+    "-lneutrino")                                                                                          # "math" library.
 endif(APPLE)
 
 if(WIN32)                                                                                           # Detecting WINDOWS...
