APPLE: #luifa. To be cleaned up.

--- a/Code/CMakeLists.txt
+++ b/Code/CMakeLists.txt
@@ -6,11 +6,44 @@ message("#######################################################################
 message("################################ C/C++ COMPILER ################################")         # Printing message...
 message("################################################################################")         # Printing message...
 
+message("Setting project name...")                                                                  # Printing message...
 project (cloth)                                                                                     # Setting project name...
 message("Project name = ${PROJECT_NAME}")                                                           # Printing message...
-message("Setting project source directories...")                                                    # Printing message...
-aux_source_directory("src/" SRC_DIR)                                                                # Setting project sources path...
-set(SOURCES ${SRC_DIR})                                                                             # Setting project sources...
+
+message("Setting build type...")                                                                    # Printing message...
+set(CMAKE_BUILD_TYPE Release)                                                                       # Setting build type...
+message("Build type = ${CMAKE_BUILD_TYPE}")                                                         # Printing message...
+
+message("Adding source files...")                                                                   # Printing message...
+aux_source_directory(${CMAKE_HOME_DIRECTORY}/src SRC_FILES)                                         # Getting all Neutrino source files...
+set(SOURCES                                                                                         # Setting "SOURCES" variable...
+  ${SRC_FILES})                                                                                     # All project source files.
+
+message("Adding build target as executable...")                                                     # Printing message...
+add_executable(${PROJECT_NAME} ${SOURCES})                                                          # Adding executable...
+
+if(APPLE)                                                                                           # Detecting APPLE...
+  message("Adding include files...")                                                                # Printing message...
+  set(INCLUDES                                                                                      # Setting "INCLUDES" variable...
+    ${CMAKE_HOME_DIRECTORY}/include                                                                 # Neutrino include directory.
+    ${NEUTRINO_PATH}/include)
+  target_include_directories(                                                                       # Setting include directories...
+    ${PROJECT_NAME} PRIVATE                                                                         # Project name.
+    ${INCLUDES})                                                                                    # All include directories.
+
+  message("Adding linked libraries...")                                                             # Printing message...
+  target_link_libraries(                                                                            # Setting other linked libraries...
+    ${PROJECT_NAME}                                                                                 # Project name.
+    "-framework OpenGL"                                                                             # OpenGL library.
+    "-framework OpenCL"                                                                             # OpenCL library.
+    "/Library/GLFW/lib-macos/libglfw.3.dylib"                                                       # GLFW library.
+    "-lm"
+    ${NEUTRINO_PATH}/lib/libneutrino.a)
+
+  message("Setting APPLE build directory...")                                                       # Printing message...
+  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/build/mac)                             # Setting build directory...
+endif(APPLE)
+
 add_custom_target(run                                                                               # Adding "make run" command...
   WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}                                               # Working directory.
   COMMAND ${PROJECT_NAME}                                                                           # Project name.
@@ -43,23 +76,6 @@ if(LINUX)                                                                       
     "-lm")                                                                                          # "math" library.
   #target_link_libraries(${PROJECT_NAME} "-lOpenGL" "-lOpenCL" ${GLFW_LIBRARY} "-lm")               # EZOR 28JUL2019: To be tested.
 endif(LINUX)
-
-if(APPLE)                                                                                           # Detecting APPLE...
-  message("Setting APPLE build directory...")                                                       # Printing message...
-  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/build/mac)                             # Setting build directory...
-  message("Adding an executable...")                                                                # Printing message...
-  add_executable(${PROJECT_NAME} ${SOURCES})                                                        # Adding executable...
-  message("Setting Mac include directories...")                                                     # Printing message...
-  target_include_directories(                                                                       # Setting include directories...
-    ${PROJECT_NAME}                                                                                 # Project name.
-    PRIVATE ${CMAKE_HOME_DIRECTORY}/include                                                         # Neutrino includes.
-    ${NEUTRINO_PATH})                                                                               # Neutrino includes.
-  message("Setting Mac library directories...")                                                     # Printing message...
-  #set(GLFW_LIBRARY ${GLFW_PATH}/lib-macos/libglfw.3.dylib)                                          # Setting GLFW library...
-  target_link_libraries(                                                                            # Setting other linked libraries...
-    ${PROJECT_NAME}                                                                                 # Project name.
-    "-lneutrino")                                                                                          # "math" library.
-endif(APPLE)
 
 if(WIN32)                                                                                           # Detecting WINDOWS...
   # EZOR: 03NOV2019 these 4 lines have to be tested.
