To be tested on Linux.

--- a/Code/CMakeLists.txt
+++ b/Code/CMakeLists.txt
@@ -44,6 +44,29 @@ if(APPLE)                                                                       
   set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/build/mac)                             # Setting build directory...
 endif(APPLE)
 
+if(UNIX AND NOT APPLE)                                                                              # Detecting LINUX...
+  message("Adding include files...")                                                                # Printing message...
+  set(INCLUDES                                                                                      # Setting "INCLUDES" variable...
+    ${CMAKE_HOME_DIRECTORY}/include                                                                 # Neutrino include directory.
+    ${NEUTRINO_PATH}/include)
+  target_include_directories(                                                                       # Setting include directories...
+    ${PROJECT_NAME} PRIVATE                                                                         # Project name.
+    ${INCLUDES})                                                                                    # All include directories.
+
+  message("Adding linked libraries...")                                                             # Printing message...
+  target_link_libraries(                                                                            # Setting other linked libraries...
+    ${PROJECT_NAME}                                                                                 # Project name.
+    "-lOpenGL"                                                                                      # OpenGL library.
+    "-lOpenCL"                                                                                      # OpenCL library.
+    "-ldl"                                                                                          # "libdl" library.
+    "-lglfw"                                                                                        # GLFW library.
+    "-lm"                                                                                           # "math" library.
+    "-lneutrino")                                                                                   # "neutrino" library.
+
+  message("Setting LINUX build directory...")                                                       # Printing message...
+  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/build/linux)                           # Setting build directory...
+endif(UNIX AND NOT APPLE)
+
 add_custom_target(run                                                                               # Adding "make run" command...
   WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}                                               # Working directory.
   COMMAND ${PROJECT_NAME}                                                                           # Project name.
@@ -53,29 +76,6 @@ if(UNIX AND NOT APPLE)                                                          
   message("Setting LINUX variable, according to an existing LINUX (but not APPLE) OS...")           # Printing message...
   set(LINUX TRUE)                                                                                   # Setting LINUX flag...
 endif()
-
-if(LINUX)                                                                                           # Detecting LINUX...
-  message("Setting LINUX build directory ...")                                                      # Printing message...
-  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/build/linux)                           # Setting build directory...
-  message("Adding an executable...")                                                                # Printing message...
-  add_executable(${PROJECT_NAME} ${SOURCES})                                                        # Adding executable...
-  message("Setting LINUX include directories...")                                                   # Printing message...
-  target_include_directories(                                                                       # Setting include directories...
-    ${PROJECT_NAME} PRIVATE ${CMAKE_HOME_DIRECTORY}/include                                         # Neutrino includes.
-    ${GLAD_PATH}/include                                                                            # GLAD includes.
-    ${GLFW_PATH}/include                                                                            # GLFW includes.
-    ${NEUTRINO_PATH}/Code/include)                                                                  # Neutrino includes.
-  message("Setting Linux library directories...")                                                   # Printing message...
-  set(GLFW_LIBRARY ${GLFW_PATH}/src/libglfw3.a)                                                     # Setting GLFW library...
-  target_link_libraries(                                                                            # Setting other linked libraries...
-    ${PROJECT_NAME}                                                                                 # Project name.
-    "-lOpenGL"                                                                                      # OpenGL library.
-    "-lOpenCL"                                                                                      # OpenCL library.
-    "-ldl"                                                                                          # "libdl" library.
-    "-lglfw"                                                                                        # GLFW library.
-    "-lm")                                                                                          # "math" library.
-  #target_link_libraries(${PROJECT_NAME} "-lOpenGL" "-lOpenCL" ${GLFW_LIBRARY} "-lm")               # EZOR 28JUL2019: To be tested.
-endif(LINUX)
 
 if(WIN32)                                                                                           # Detecting WINDOWS...
   # EZOR: 03NOV2019 these 4 lines have to be tested.
