--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
-/Code/cmake
-/Code/build
-/Docs/Doxygen
+/Cloth/Code/cmake
+/Cloth/Code/build
+/Cloth/Docs/Doxygen
+/Sinusoid/Code/cmake
+/Sinusoid/Code/build
+/Sinusoid/Docs/Doxygen
