Fixed paths for Mac, tested on Mac: It works. "build\mac" directory is not created automatically: to be fixed.

--- a/Cloth/Code/CMakeLists.txt
+++ b/Cloth/Code/CMakeLists.txt
@@ -36,7 +36,7 @@ if(APPLE)                                                                       
     ${PROJECT_NAME}                                                                                 # Project name.
     "-framework OpenGL"                                                                             # OpenGL library.
     "-framework OpenCL"                                                                             # OpenCL library.
-    "/Library/GLFW/lib-macos/libglfw.3.dylib"                                                       # GLFW library.
+    ${GLFW_PATH}/lib-macos/libglfw.3.dylib                                                          # GLFW library.
     "-lm"
     "-lneutrino")
 
