Sinusoid, Windows 10. It must be build from an x64 Native Tools Command Proampt for VS 2019, as well as for the Neutrino library.

--- a/Sinusoid/Code/CMakeLists.txt
+++ b/Sinusoid/Code/CMakeLists.txt
@@ -67,39 +67,30 @@ if(UNIX AND NOT APPLE)                                                          
   set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/build/linux)                           # Setting build directory...
 endif(UNIX AND NOT APPLE)
 
+if(WIN32)                                                                                           # Detecting WINDOWS...
+  message("Adding include files...")                                                                # Printing message...
+  set(INCLUDES                                                                                      # Setting "INCLUDES" variable...
+    ${CMAKE_HOME_DIRECTORY}/include                                                                 # Neutrino include directory.
+    ${NEUTRINO_PATH}/include)
+  target_include_directories(                                                                       # Setting include directories...
+    ${PROJECT_NAME} PRIVATE                                                                         # Project name.
+    ${INCLUDES})                                                                                    # All include directories.
+
+  message("Adding linked libraries...")                                                             # Printing message...
+  target_link_libraries(                                                                            # Setting other linked libraries...
+    ${PROJECT_NAME}                                                                                 # Project name.
+    ${CL_PATH}/lib/x64/OpenCL.lib                                                                   # OpenCL library.
+    ${GLFW_PATH}/lib-vc2019/glfw3.lib                                                               # GLFW library.
+    ${NEUTRINO_PATH}/lib/nu.lib)                                                                    # "neutrino" library.
+
+  message("Setting WINDOWS build directory...")                                                     # Printing message...
+  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/build/windows)                         # Setting build directory...
+endif(WIN32)
+
 add_custom_target(run                                                                               # Adding "make run" command...
   WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}                                               # Working directory.
   COMMAND ${PROJECT_NAME}                                                                           # Project name.
   VERBATIM)                                                                                         # Escaping all commands properly for the build tool...
-
-if(UNIX AND NOT APPLE)                                                                              # Detecting non APPLE LINUX...
-  message("Setting LINUX variable, according to an existing LINUX (but not APPLE) OS...")           # Printing message...
-  set(LINUX TRUE)                                                                                   # Setting LINUX flag...
-endif()
-
-if(WIN32)                                                                                           # Detecting WINDOWS...
-  # EZOR: 03NOV2019 these 4 lines have to be tested.
-  message("Setting WINDOWS build directory...")                                                     # Printing message...
-  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/build/windows)                         # Setting build directory...
-  message("Adding an executable...")                                                                # Printing message...
-  add_executable(${PROJECT_NAME} ${SOURCES})                                                        # Adding executable...
-
-  message("Setting Windows include directories...")                                                 # Printing message...
-  target_include_directories(                                                                       # Setting include directories...
-    ${PROJECT_NAME}                                                                                 # Project name.
-    PRIVATE ${CMAKE_HOME_DIRECTORY}/include                                                         # Neutrino includes.
-    ${GLAD_PATH}/include                                                                            # GLAD includes.
-    ${GLFW_PATH}/include                                                                            # GLFW includes.
-    ${NEUTRINO_PATH}/Code/include                                                                   # Neutrino includes.
-    ${CL_PATH}/include)                                                                             # OpenCL includes.
-  message("Setting Windows library directories...")                                                 # Printing message...
-  set(GLFW_LIBRARY ${GLFW_PATH}/lib-vc2019/glfw3.lib)                                               # GLFW library.
-  #set(CL_LIBRARY $"C:/Program Files/NVIDIA GPU Computing Toolkit/CUDA/v10.1/lib/x64/OpenCL.lib")
-  target_link_libraries(                                                                            # Setting other linked libraries...
-    ${PROJECT_NAME}                                                                                 # Project name.
-    ${CL_PATH}/lib/x64/OpenCL.lib                                                                   # OpenCL library.
-    ${GLFW_LIBRARY})                                                                                # GLFW library.
-endif(WIN32)
 
 message("DONE!")                                                                                    # Printing message...
 
